# checksum

./: .gitignore  .travis.yml  Makefile  Makefile.old  README.md  configure.ac
src/: Makefile.am  adler.c  checksum.c  checksum.h  ck_mmap.c  ck_stream.c  crc32.c  main.c
tests/: Makefile.am  run.test
